fix: bug with combined use of shift and keys on virtual and real keyboards

--- a/src/sass/_keys.scss
+++ b/src/sass/_keys.scss
@@ -37,6 +37,11 @@
   }
 }
 
+.shift_right_btn {
+  width: 118px;
+  background-color: $btn-bg-color;
+}
+
 .large_btn {
   width: 90px;
   background-color: $btn-bg-color;
